--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,19 +1,17 @@
 .features {
-    display: flex;
     width: 100%;
     justify-content: center;
     gap: 30px;
-    padding: 0;
+    // padding: 0;
     margin-top: 94px;
 }
 
 .features p {
-    max-width: 270px;
     line-height: 1.71em;
 }
 
 .features__icon {
-    width: 270px;
+    width: 100%;
     height: 120px;
     background-color: #f5f4fa;
     border-radius: 4px;
@@ -23,8 +21,43 @@
     align-items: center;
 }
 .features__header {
+    justify-content: center;
     font-size: 14px;
     font-weight: 700;
     line-height: 1.23em;
     letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+    .features {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            gap: 30px;
+            padding: 0;
+            margin-top: 94px;
+        }
+    
+        .features p {
+            max-width: 270px;
+            line-height: 1.71em;
+        }
+    
+        .features__icon {
+            width: 270px;
+            height: 120px;
+            background-color: #f5f4fa;
+            border-radius: 4px;
+            border: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        .features__header {
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 1.23em;
+            letter-spacing: 0.03em;
+        }
 }
