--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,8 +1,8 @@
 .slider {
     display: flex;
     box-sizing: border-box;
-    max-width: 1600px;
-    height: 600px;
+    // max-width: 1600px;
+    height: 400px;
     justify-content: center;
     background: #2f303a66;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
@@ -10,18 +10,17 @@
         url(../images/slider-photo.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     flex-direction: column;
 }
 
 .slider__text {
-    display: flex;
-    width: 696px;
+    display: block;
     margin: 0 auto;
-    flex-wrap: wrap;
     margin-bottom: 30px;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.26em;
+    font-size: 26px;
+    line-height: 1.615em;
     color: $primary-color;
     text-align: center;
     letter-spacing: 0.06em;
@@ -46,4 +45,30 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+.slider {
+    display: flex;
+    box-sizing: border-box;
+    max-width: 1600px;
+    height: 600px;
+    justify-content: center;
+    background: #2f303a66;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+        url(../images/slider-photo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    flex-direction: column;
+}
+
+.slider__text {
+    display: flex;
+    width: 696px;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+    font-weight: 900;
+    font-size: 44px;
+}
 }
