--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,16 +3,30 @@
 }
 
 .client__box {
-    display: flex;
-    justify-content: space-around;
+
 }
 
+.client__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    width: 100%;
+}
+
+.client__item {
+    display: flex;
+    -webkit-box-pack: center;
+}
 .client__icon {
+    width: 100%;
+}
+
+.client__link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
-    height: 92px;
+    width: 100%;
+    // height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
     fill: #afb1b8;
@@ -24,4 +38,43 @@
             transition: fill 250ms $cubic-bezier,
                 border-color 250ms $cubic-bezier;
         }
+}
+
+@media screen and (min-width: 768px) {
+.client {
+    padding-top: 94px;
+}
+
+.client__box {
+    display: flex;
+    justify-content: space-around;
+}
+.client__list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.client__item {
+    display: flex;
+}
+
+.client__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    fill: #afb1b8;
+
+    &:hover,
+    &:focus {
+        fill: $main-color;
+        border-color: $main-color;
+        cursor: pointer;
+        transition: fill 250ms $cubic-bezier,
+            border-color 250ms $cubic-bezier;
+    }
+}
 }
