--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -21,6 +21,7 @@
     align-items: center;
 }
 .features__header {
+    display: flex;
     justify-content: center;
     font-size: 14px;
     font-weight: 700;
