--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -9,6 +9,38 @@
     padding-block: 6px;
     border-radius: 4px;
 
+    &:hover,
+    &:focus {
+        background-color: $main-color;
+        color: $primary-color;
+        transition: background-color 250ms $cubic-bezier,
+            color 250ms $cubic-bezier;
+        cursor: pointer;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+        transition: box-shadow 250ms $cubic-bezier;
+    }
+}
+
+.box-filter {
+    padding-top: 94px;
+    padding-bottom: 0;
+    gap: 8px;
+    justify-content: left;
+}
+
+@media screen and (min-width:726px) {
+.box-filter__btn {
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 500;
+    border: none;
+    line-height: 1.62em;
+    cursor: pointer;
+    padding-inline: 22px;
+    padding-block: 6px;
+    border-radius: 4px;
+
     &:hover, &:focus {
         background-color: $main-color;
         color: $primary-color;
@@ -25,4 +57,6 @@
     padding-top: 94px;
     padding-bottom: 0;
     gap: 8px;
+    justify-content: center;
+}
 }
