--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,6 +3,7 @@
     letter-spacing: 0.03em;
     color: $primary-color;
     font-style: normal;
+    text-align: center;
 }
 
 .footer {
@@ -31,14 +32,26 @@
     letter-spacing: 0.03em;
     line-height: 1.14em;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 20px;
 }
 
-.footer__sm--margin-left {
-    margin-left: 70px;
-}
+// .footer__sm--margin-left {
+//     margin-left: 70px;
+// }
 
-.footer__sm--gap {
+.footer__sm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer__sm-icons {
     gap: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .icon__sm--fill {
@@ -48,7 +61,11 @@
 
 .footer__inner {
     padding-block: 60px;
-    display: flex;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 100%;
 }
 
 .footer__inner ul {
@@ -57,6 +74,18 @@
 
 .footer__inner li {
     margin-bottom: 0.5em;
+}
+
+.footer-contacts {
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.footer-contacts__item {
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 .footer__link {
@@ -117,8 +146,9 @@
     margin-left: 70px;
 }
 
-.footer__sm--gap {
+.footer__sm-icons {
     gap: 10px;
+    justify-content: space-around;
 }
 
 .icon__sm--fill {
