--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,4 +1,4 @@
-.mobile-menu__overlay {
+.m-menu__overlay {
     position: fixed;
     z-index: 3;
     width: 100%;
@@ -7,139 +7,147 @@
     visibility: hidden;
     pointer-events: none;
     transform: translateX(100%);
-    transition: transform $trans, opacity $trans,
-        visibility $trans;
+    transition: transform $cubic-bezier, opacity $cubic-bezier,
+        visibility $cubic-bezier;
     background-color: #fff;
 }
 
-.mobile-menu-btn {
+.m-menu-btn {
     background: none;
     border: none;
     box-shadow: none;
 }
 
-.mobile-menu-btn__icon {
-    transition: fill $trans;
+.m-menu-btn__icon {
+    transition: fill $cubic-bezier;
 }
 
-.mobile-menu-btn__icon:hover,
-.mobile-menu-btn__icon:focus {
-    fill: $accentC;
+.m-menu-btn__icon:hover,
+.m-menu-btn__icon:focus {
+    fill: $main-color;
 }
 
-.mobile-menu__overlay.is-open {
+.m-menu__overlay.is-open {
     transform: translateX(0);
     opacity: 1;
     pointer-events: initial;
     visibility: visible;
 }
 
-.mobile-menu {
+.m-menu {
     display: flex;
     flex-direction: column;
     padding: 48px 40px;
     width: 100%;
     height: 100%;
     position: relative;
-    color: $brandC;
+    color: $black-title;
     opacity: 1;
     background-color: #fff;
     z-index: 998;
 }
 
-.mobile-menu__list-nav {
+.m-menu__list-nav {
+    padding: 0;
     list-style-type: none;
     margin-bottom: 302px;
 }
 
-.mobile-menu__btn-close {
+.m-menu__btn-close {
     position: absolute;
     background-color: #fff;
     border: none;
     right: 10px;
     top: 10px;
     cursor: pointer;
-    transition: fill $trans;
+    transition: fill $cubic-bezier;
 
     &:hover,
     &:focus {
-        fill: $accentC;
+        fill: $main-color;
     }
 }
 
-.mobile-menu__link-nav {
+.m-menu__link-nav {
     font-weight: 500;
     font-size: 40px;
     line-height: calc(47 / 40);
     letter-spacing: 0.02em;
-    color: $brandC;
+    color: $black-title;
     list-style-type: none;
+    text-decoration: none;
 }
 
-.mobile-menu__link-nav--active {
-    color: $accentC;
+.m-menu__link-nav--active {
+    color: $main-color;
 }
 
-.mobile-menu__item-nav:not(:last-child) {
+.m-menu__item-nav:not(:last-child) {
     padding-bottom: 32px;
 }
 
-.mobile-menu__list-contact {
+.m-menu__list-contact {
     list-style-type: none;
+    padding: 0;
 }
 
-.mobile-menu__link-contact-tel {
+.m-menu__link-contact-tel {
     padding-bottom: 32px;
     font-weight: 500;
     font-size: 34px;
     line-height: calc(40 / 34);
     letter-spacing: 0.02em;
-    color: $accentC;
+    color: $main-color;
+    text-decoration: none;
 }
 
-.mobile-menu__list-contact-tel {
+.m-menu__list-contact-tel {
     margin-bottom: 32px;
 }
 
-.mobile-menu__link-contact-mailto {
+.m-menu__link-contact-mailto {
     font-weight: 500;
     font-size: 24px;
     line-height: calc(28 / 24);
     letter-spacing: 0.02em;
-    color: $greyC;
+    color: $secondary-color;
+    text-decoration: none;
 }
 
-.mobile-menu__list-contact-mailto {
+.m-menu__list-contact-mailto {
     margin-bottom: 64px;
 }
 
-.mobile-menu__list-social {
+.m-menu__list-social {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     list-style-type: none;
+    padding: 0;
 }
 
-.mobile-menu__link-social {
+.m-menu__link-social {
     font-weight: 500;
     font-size: 18px;
     line-height: calc(22 / 18);
     letter-spacing: 0.02em;
-    color: $accentC;
+    color: $main-color;
+    text-decoration: none;
 }
 
-.mobile-menu__item-social:not(:last-child) .mobile-menu__link-social {
+.m-menu__item-social:not(:last-child) .m-menu__link-social {
     display: flex;
     padding-right: 10px;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 @media screen and (min-width: 768px) {
-    .mobile-menu {
+    .m-menu {
         display: none;
     }
+    
 
-    .mobile-menu-btn {
+    .m-menu-btn {
         display: none;
     }
 }
