--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,33 +1,37 @@
+.newsletter {
+    // position: relative;
+    // max-width: 570px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // flex-wrap: nowrap;
+    // align-items: center;
+    border: 0;
+    padding: 0;
+    // padding-left: 78px;
+}
+
 .newsletter__btn {
     display: flex;
-    position: absolute;
+    // position: relative;
     align-items: center;
     justify-content: space-around;
     padding-inline: 35px;
     // left: 453px;
-    top: 47px;
+    // top: 47px;
 }
 
-.newsletter {
-    position: relative;
-    max-width: 570px;
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    border: 0;
-    padding: 0;
-    padding-left: 78px;
-}
-
-.newsletter label {
-    padding-top: 1em;
+.newsletter__label {
+    padding-bottom: 10px;
+    width: 100%;
 }
 
 .newsletter input {
-    position: absolute;
-    top: 47px;
+    // position: absolute;
+    // top: 47px;
     display: flex;
-    width: 358px;
+    width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-filter__btn: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
