--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,4 +18,5 @@
 @import "./components/filter";
 @import "./components/project";
 @import "./components/modal";
-@import "./components/_newsletter.scss";
+@import "./components/newsletter";
+@import "./components/_mobile-menu.scss";
