--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -7,7 +7,8 @@
     background: #2f303a66;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/slider-photo.jpg);
+        url(../images/slider-photo-mobile.jpg);
+    
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -47,6 +48,16 @@
     align-items: center;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+screen and (min-resolution: 192dpi) and (min-width: 320px),
+screen and (min-resolution: 2dppx) and (min-width: 320px) {
+    .slider {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url(../images/slider-photo-mobile@2x.jpg);
+    }
+}
+
 @media screen and (min-width: 768px) {
 .slider {
     display: flex;
@@ -71,4 +82,24 @@
     font-weight: 900;
     font-size: 44px;
 }
+}
+
+@media screen and (min-width: 1200px) {
+    .slider {
+            display: flex;
+            box-sizing: border-box;
+            max-width: 1600px;
+            height: 600px;
+            justify-content: center;
+            background: #2f303a66;
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url(../images/slider-photo.jpg);
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url(../images/slider-photo.jpg);
+            background-repeat: no-repeat;
+            background-position: center;
+            flex-direction: column;
+        }
 }
