--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -27,6 +27,7 @@
     padding-bottom: 0;
     gap: 8px;
     justify-content: left;
+    flex-wrap: wrap;
 }
 
 @media screen and (min-width:726px) {
