--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -88,6 +88,10 @@ align-items: center;
 justify-content: center;
 }
 
+// .footer__newsletter {
+//     width: 100%;
+// }
+
 .footer__link {
     line-height: 1.5em;
     letter-spacing: 0.03em;
@@ -107,82 +111,180 @@ justify-content: center;
     }
 }
 @media screen and (min-width: 768px){
-.address {
-    line-height: 1.5em;
-    letter-spacing: 0.03em;
-    color: $primary-color;
-    font-style: normal;
-}
+// .address {
+//     line-height: 1.5em;
+//     letter-spacing: 0.03em;
+//     color: $primary-color;
+//     font-style: normal;
+// }
 
-.footer {
-    align-items: center;
-    width: 100%;
-    display: flex;
-    justify-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: #2f303a;
-}
+// .footer {
+//     align-items: center;
+//     width: 100%;
+//     display: flex;
+//     justify-items: center;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     background-color: #2f303a;
+// }
 
-.footer__text--primary-color {
-    color: $primary-color;
-}
+// .footer__text--primary-color {
+//     color: $primary-color;
+// }
 
-.footer__text--uppercase {
-    text-transform: uppercase;
-}
+// .footer__text--uppercase {
+//     text-transform: uppercase;
+// }
 
-.footer__text--bold {
-    font-weight: 700;
-}
+// .footer__text--bold {
+//     font-weight: 700;
+// }
 
 .footer__text {
-    letter-spacing: 0.03em;
-    line-height: 1.14em;
-    margin-bottom: 20px;
+    // letter-spacing: 0.03em;
+    // line-height: 1.14em;
+    margin-block: 0;
+    padding-top: 0;
 }
 
-.footer__sm--margin-left {
-    margin-left: 70px;
-}
+// .footer__sm--margin-left {
+//     margin-left: 70px;
+// }
 
-.footer__sm-icons {
-    gap: 10px;
-    justify-content: space-around;
-}
+// .footer__sm-icons {
+//     gap: 10px;
+//     justify-content: space-around;
+// }
 
-.icon__sm--fill {
-    background-color: rgba(255 255 255 / 0.1);
-    fill: $primary-color;
+// .icon__sm--fill {
+//     background-color: rgba(255 255 255 / 0.1);
+//     fill: $primary-color;
+// }
+.footer__newsletter {
+    width: 100%;
 }
 
 .footer__inner {
     padding-block: 60px;
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
-.footer__inner ul {
-    padding: 0;
+.footer-contacts {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 60px;
 }
 
-.footer__inner li {
-    margin-bottom: 0.5em;
+// .footer__inner ul {
+//     padding: 0;
+// }
+
+// .footer__inner li {
+//     margin-bottom: 0.5em;
+// }
+
+// .footer__link {
+//     line-height: 1.5em;
+//     letter-spacing: 0.03em;
+//     color: $shadows;
+//     font-style: normal;
+//     text-decoration: none;
+// }
+
+// .footer__logo {
+//     color: $primary-color;
+
+//     &:hover, &:focus, &:visited {
+//             color: $primary-color;
+//             transition: color 250ms $cubic-bezier;
+//         }
+// }
 }
 
-.footer__link {
-    line-height: 1.5em;
-    letter-spacing: 0.03em;
-    color: $shadows;
-    font-style: normal;
-    text-decoration: none;
-}
+@media screen and (min-width: 1200px) {
+    .address {
+        line-height: 1.5em;
+        letter-spacing: 0.03em;
+        color: $primary-color;
+        font-style: normal;
+    }
 
-.footer__logo {
-    color: $primary-color;
+    .footer {
+        align-items: center;
+        width: 100%;
+        display: flex;
+        justify-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        background-color: #2f303a;
+    }
 
-    &:hover, &:focus, &:visited {
+    .footer__text--primary-color {
+        color: $primary-color;
+    }
+
+    .footer__text--uppercase {
+        text-transform: uppercase;
+    }
+
+    .footer__text--bold {
+        font-weight: 700;
+    }
+
+    .footer__text {
+        letter-spacing: 0.03em;
+        line-height: 1.14em;
+        margin-bottom: 20px;
+    }
+
+    .footer__sm--margin-left {
+        margin-left: 70px;
+    }
+
+    .footer__sm-icons {
+        gap: 10px;
+        justify-content: space-around;
+    }
+
+    .icon__sm--fill {
+        background-color: rgba(255 255 255 / 0.1);
+        fill: $primary-color;
+    }
+
+    .footer__inner {
+        padding-block: 60px;
+        display: flex;
+    }
+
+    .footer__inner ul {
+        padding: 0;
+    }
+
+    .footer__inner li {
+        margin-bottom: 0.5em;
+    }
+
+    .footer__link {
+        line-height: 1.5em;
+        letter-spacing: 0.03em;
+        color: $shadows;
+        font-style: normal;
+        text-decoration: none;
+    }
+
+    .footer__logo {
+        color: $primary-color;
+
+        &:hover,
+        &:focus,
+        &:visited {
             color: $primary-color;
             transition: color 250ms $cubic-bezier;
         }
-}
+    }
 }
