--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,7 +3,7 @@
 }
 .navigation {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding-block: 8px;
 }
