--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,3 +1,10 @@
+.team__img {
+width: 100%;
+height: auto;
+display: block;
+object-fit: cover;
+}
+
 .team__name {
     font-weight: 500;
     font-size: 16px;
