--- a/sass/utils/_reset.scss
+++ b/sass/utils/_reset.scss
@@ -6,7 +6,7 @@ body {
 
 .box {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     padding: 0;
     width: 100%;
@@ -31,10 +31,38 @@ li>img {
     width: 100%;
 }
 
-@media screen and (min-width: 726px){
+@media screen and (min-width: 768px){
 .page-width {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
+.box {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
+    gap: 30px;
+    margin-bottom: 0;
 }
+}
+
+@media screen and (min-width: 1200px) {
+    .page-width {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+    
+        .box {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: center;
+            padding: 0;
+            width: 100%;
+            gap: 30px;
+            margin-bottom: 0;
+        }
+    }
