--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -113,7 +113,107 @@
 
 .navigation__contact {
     display: inline-flex;
+    flex-direction: column;
+    // align-items: center;
+    gap: 10px;
+    padding-left: 0;
+}
+
+.navigation__item {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.icon {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.navigation__contact a {
+    fill: $secondary-color;
+
+    &:hover, &:focus {
+            fill: $main-color;
+            color: $main-color;
+            transition: fill 250ms $cubic-bezier, color 250ms $cubic-bezier;
+        }
+}
+
+.list {
+    list-style-type: none;
+}
+
+.link {
+    text-decoration: none;
+    color: $tertiary-color;
+    position: relative;
+
+    &:hover, &:focus {
+            color: $main-color;
+            transition: color 250ms $cubic-bezier;
+        }
+}
+
+.link--active::after {
+    position: absolute;
+    content: "";
+    text-decoration: underline;
+    border-radius: 2px;
+    background-color: $main-color;
+    height: 4px;
+    width: 53px;
+    left: 0;
+    bottom: -33px;
+}
+
+.navigation__contact--font {
+    line-height: 1.14em;
+    letter-spacing: 0.02em;
+    color: $secondary-color;
+    display: flex;
     align-items: center;
+}
+}
+@media screen and (min-width: 1200px) {
+.page-header {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    height: 80px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    gap: calc(10% / 3);
+    border-bottom: 1px solid $border-header;
+}
+
+.page-width {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navigation--bold {
+    font-weight: 500;
+}
+
+.navigation__categories {
+    padding: 0;
+    display: flex;
+    gap: 46px;
+}
+
+.navigation__contact {
+    display: inline-flex;
+    align-items: center;
+    flex-direction: row;
     gap: 50px;
     padding-left: 0;
 }
