--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -15,7 +15,7 @@
 
 .client__item {
     display: flex;
-    -webkit-box-pack: center;
+    // -webkit-box-pack: center;
 }
 .client__icon {
     width: 100%;
@@ -41,18 +41,16 @@
 }
 
 @media screen and (min-width: 768px) {
-.client {
-    padding-top: 94px;
+// .client {
+//     padding-top: 94px;
 }
 
-.client__box {
-    display: flex;
-    justify-content: space-around;
-}
+// .client__box {
+//     display: flex;
+//     justify-content: space-around;
+// }
 .client__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .client__item {
@@ -60,14 +58,6 @@
 }
 
 .client__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 170px;
-    height: 92px;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    fill: #afb1b8;
 
     &:hover,
     &:focus {
@@ -77,7 +67,6 @@
         transition: fill 250ms $cubic-bezier,
             border-color 250ms $cubic-bezier;
     }
-}
 }
 
 @media screen and (min-width: 1200px) {
