--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -30,6 +30,50 @@
 }
 
 @media screen and (min-width: 768px) {
+    .features__item {
+        flex-basis: calc((100% - 30px)/2);
+        }
+
+    .features {
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            justify-content: space-between;
+            gap: 30px;
+            padding: 0;
+            margin-top: 94px;
+        }
+    
+    .features p {
+            // max-width: 270px;
+            // width: 50%;
+            line-height: 1.71em;
+        }
+    
+        .features__icon {
+            // width: 50%;
+            height: 120px;
+            background-color: #f5f4fa;
+            border-radius: 4px;
+            border: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        .features__header {
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 1.23em;
+            letter-spacing: 0.03em;
+            // width: 50%;
+        }
+}
+@media screen and (min-width: 1200px) {
+    .features__item {
+            flex-basis: 0;
+        }
+
     .features {
             display: flex;
             width: 100%;
