--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -33,11 +33,6 @@
     // justify-content: center;
 }
 
-.project>div {
-    // margin-bottom: 30px;
-    // border: 1px solid #eeeeee;
-}
-
 .project h4 {
     padding-inline: 24px;
     margin-top: 20px;
@@ -132,10 +127,6 @@
     gap: 30px;
 }
 
-.project>div {
-    // border: 1px solid #eeeeee;
-}
-
 .project h4 {
     padding-inline: 24px;
     margin-top: 20px;
@@ -150,6 +141,7 @@
 
 .project__item {
     position: relative;
+    flex-basis: calc((100% - 30px)/2);
     // border: 1px solid #eeeeee;
 
     &:focus, &:hover {
@@ -219,13 +211,18 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
-        gap: 30px;
+        gap: 0;
+        row-gap: 30px;
+
+        box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
     }
 
-    .project>div {
-        margin-bottom: 30px;
-        // border: 1px solid #eeeeee;
-    }
+    // .project>div {
+    //     margin-bottom: 30px;
+    //     // border: 1px solid #eeeeee;
+    // }
 
     .project h4 {
         padding-inline: 24px;
@@ -241,6 +238,11 @@
 
     .project__item {
         position: relative;
+        flex-basis: auto;
+        // display: flex;
+        box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
 
         &:focus,
         &:hover {
