--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -19,6 +19,8 @@
     display: block;
     margin: 0 auto;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
     font-weight: 900;
     font-size: 26px;
     line-height: 1.615em;
@@ -62,25 +64,27 @@ screen and (min-resolution: 2dppx) and (min-width: 320px) {
 .slider {
     display: flex;
     box-sizing: border-box;
-    max-width: 1600px;
-    height: 600px;
+    // max-width: 1600px;
+    // height: 600px;
     justify-content: center;
     background: #2f303a66;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/slider-photo.jpg);
+        url(../images/slider-photo-tablet.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     flex-direction: column;
 }
 
-.slider__text {
-    display: flex;
-    width: 696px;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
-    font-weight: 900;
-    font-size: 44px;
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+screen and (min-resolution: 192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    .slider {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url(../images/slider-photo-tablet@2x.jpg);
+    }
 }
 }
 
@@ -95,11 +99,17 @@ screen and (min-resolution: 2dppx) and (min-width: 320px) {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../images/slider-photo.jpg);
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-                    rgba(47, 48, 58, 0.4)),
-                url(../images/slider-photo.jpg);
             background-repeat: no-repeat;
             background-position: center;
             flex-direction: column;
         }
+                @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+                screen and (min-resolution: 192dpi) and (min-width: 1200px),
+                screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+                    .slider {
+                        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                                rgba(47, 48, 58, 0.4)),
+                            url(../images/slider-photo@2x.jpg);
+                    }
+                }
 }
