--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -18,3 +18,51 @@ object-fit: cover;
     letter-spacing: 0.03em;
     color: $secondary-color;
 }
+@media screen and (min-width: 768px) {
+    .team__img {
+        width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+    }
+    
+    .team__name {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18em;
+        letter-spacing: 0.03em;
+    }
+    
+    .team__office {
+    font-size: 16px;
+    line-height: 1.18em;
+    letter-spacing: 0.03em;
+    color: $secondary-color;
+}
+    .team__item {
+        flex-basis: calc((100% - 30px)/2);
+        display: block;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .team__img {
+        width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+    }
+    
+    .team__name {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18em;
+        letter-spacing: 0.03em;
+    }
+    
+    .team__office {
+    font-size: 16px;
+    line-height: 1.18em;
+    letter-spacing: 0.03em;
+    color: $secondary-color;
+}
+}
