--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -2,6 +2,9 @@
     display: none;
 }
 @media screen and (min-width: 1200px) {
+.services {
+        display: block;
+    }
 
 .services__img {
     position: relative;
