--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -2,14 +2,15 @@
     width: 100%;
     justify-content: center;
     gap: 30px;
-    // padding: 0;
     margin-top: 94px;
 }
-
 .features p {
     line-height: 1.71em;
+    letter-spacing: 0.03em;
+    margin-top: 0;
+    margin-bottom: 30px;
+    color: $secondary-color;
 }
-
 .features__icon {
     width: 100%;
     height: 120px;
@@ -27,6 +28,11 @@
     font-weight: 700;
     line-height: 1.23em;
     letter-spacing: 0.03em;
+    margin-top: 30px;
+    marrgin-bottom: 10px;
+}
+.features__item:last-child p {
+    margin-bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -37,72 +43,26 @@
     .features {
             display: flex;
             flex-wrap: wrap;
-            width: 100%;
             justify-content: space-between;
-            gap: 30px;
-            padding: 0;
-            margin-top: 94px;
         }
-    
-    .features p {
-            // max-width: 270px;
-            // width: 50%;
-            line-height: 1.71em;
-        }
-    
-        .features__icon {
-            // width: 50%;
-            height: 120px;
-            background-color: #f5f4fa;
-            border-radius: 4px;
-            border: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    
         .features__header {
-            font-size: 14px;
-            font-weight: 700;
-            line-height: 1.23em;
-            letter-spacing: 0.03em;
-            // width: 50%;
+            justify-content: flex-start;
         }
 }
+
 @media screen and (min-width: 1200px) {
     .features__item {
             flex-basis: 0;
         }
-
     .features {
-            display: flex;
-            width: 100%;
             justify-content: center;
-            gap: 30px;
-            padding: 0;
-            margin-top: 94px;
         }
-    
-        .features p {
+
+     .features p {
             max-width: 270px;
-            line-height: 1.71em;
         }
     
-        .features__icon {
+    .features__icon {
             width: 270px;
-            height: 120px;
-            background-color: #f5f4fa;
-            border-radius: 4px;
-            border: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    
-        .features__header {
-            font-size: 14px;
-            font-weight: 700;
-            line-height: 1.23em;
-            letter-spacing: 0.03em;
         }
 }
