--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,71 +1,38 @@
 .logo__name--blue {
     color: $main-color;
 }
-
 .logo {
     font-family: $add-font;
-    font-size: 26px;
+    font-size: 24px;
+    line-height: 1.16em;
     font-weight: 700;
     letter-spacing: 0.03em;
     text-decoration: none;
+    margin-bottom: 20px;
 }
-
 .logo--black {
     color: $tertiary-color;
     align-items: baseline;
     margin-right: 93px;
-
+    display: contents;
     &:hover, &:focus, &:visited {
             color: $tertiary-color;
             transition: color 250ms $cubic-bezier;
         }
 }
+
 @media screen and (min-width: 768px) {
 .logo__name--blue {
     color: $main-color;
 }
-
 .logo {
     font-family: $add-font;
-    font-size: 26px;
     font-weight: 700;
     letter-spacing: 0.03em;
     text-decoration: none;
 }
-
 .logo--black {
-    color: $tertiary-color;
-    align-items: baseline;
-    margin-right: 93px;
-
-    &:hover, &:focus, &:visited {
-            color: $tertiary-color;
-            transition: color 250ms $cubic-bezier;
-        }
+    display: inline-flex;
+    margin-bottom: 0;
 }
 }
-@media screen and (min-width: 1200px) {
-.logo__name--blue {
-    color: $main-color;
-}
-
-.logo {
-    font-family: $add-font;
-    font-size: 26px;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-}
-
-.logo--black {
-    color: $tertiary-color;
-    align-items: baseline;
-    margin-right: 93px;
-
-    &:hover, &:focus, &:visited {
-            color: $tertiary-color;
-            transition: color 250ms $cubic-bezier;
-        }
-}
-}
-
