--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,23 +18,33 @@
     position: absolute;
     top: 8px;
     right: 8px;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
     border-width: 0px;
     border-style: none;
     border-color: $primary-color;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: $primary-color;
-
     &:hover {
-transform: scale(1.1);
+    transform: scale(1.1);
     transition: transform 250ms $cubic-bezier;
     }
+}
+    .modal__btn--close svg {
+        &:hover,
+        &:focus {
+            fill: $main-color;
+            cursor: pointer;
+            transition: fill 250ms $cubic-bezier;
+        }
 }
 
 /* form in pop-up window */
 .modal__title {
     position: absolute;
     width: auto;
-    // left: 43px;
     top: 43px;
     font-family: "Roboto";
     font-style: normal;
@@ -46,11 +56,10 @@ transform: scale(1.1);
 }
 
 .modal__form {
-    margin-top: 70px;
+    margin-top: 60px;
     max-width: 450px;
     width: 90%;
     margin-inline: 20px;
-
     &::placeholder {
             color: rgba(117, 117, 117, 0.5);
             font-size: 12px;
@@ -77,18 +86,15 @@ transform: scale(1.1);
     margin-block: 28px;
     width: 100%;
     height: 40px;
-
     &:last-child {
         margin-top: 20px;
         margin-bottom: 31px;
     }
-
     & input:focus+svg {
             fill: $main-color;
             transition: fill 250ms;
             transition-timing-function: $cubic-bezier;
         }
-    
     & input:focus {
             border-color: $main-color;
             transition: border-color 250ms;
@@ -145,9 +151,6 @@ transform: scale(1.1);
 }
 
 .modal__form label.modal__check-policy {
-    // position: absolute;
-    // top: 415px;
-    // left: 50px;
     font-size: 14px;
     line-height: 1.71em;
     letter-spacing: 0.03em;
@@ -163,7 +166,6 @@ transform: scale(1.1);
     border-radius: 1%;
     padding-inline: 16px;
     padding-block: 12px;
-
     &:focus-within {
             padding-inline: 16px;
             padding-block: 12px;
@@ -178,7 +180,6 @@ textarea:focus {
 
 .modal__checkbox {
     visibility: hidden;
-
     &:checked+span svg {
             background-color: $main-color;
             border: 0;
@@ -199,402 +200,28 @@ textarea:focus {
 }
 
 .modal__btn {
-    // position: absolute;
     width: 200px;
     height: 50px;
-    // top: 490px;
 }
-// @media screen and (min-width: 768px) {
-// .modal {
-//     margin: auto;
-//     height: 581px;
-//     width: 528px;
-//     border-radius: 4px;
-//     background-color: $primary-color;
-//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-//         0px 2px 1px rgba(0, 0, 0, 0.2);
-//     display: flex;
-//     justify-content: center;
-//     position: relative;
-// }
 
-// .modal__btn--close {
-//     position: absolute;
-//     top: 8px;
-//     right: 8px;
-//     cursor: pointer;
-//     border-width: 0px;
-//     border-style: none;
-//     border-color: $primary-color;
-//     background-color: $primary-color;
-
-//     &:hover {
-// transform: scale(1.1);
-//     transition: transform 250ms $cubic-bezier;
-//     }
-// }
-
-// /* form in pop-up window */
-// .modal__title {
-//     position: absolute;
-//     width: 448px;
-//     left: 43px;
-//     top: 43px;
-//     font-family: "Roboto";
-//     font-style: normal;
-//     font-weight: 700;
-//     font-size: 20px;
-//     line-height: 23px;
-//     text-align: center;
-//     letter-spacing: 0.03em;
-// }
-
-// .modal__form {
-//     margin-top: 70px;
-//     max-width: 100%;
-//     margin-inline: 20px;
-
-//     &::placeholder {
-//             color: rgba(117, 117, 117, 0.5);
-//             font-size: 12px;
-//             line-height: 1.14em;
-//             letter-spacing: 0.01em;
-//             position: absolute;
-//             top: 12px;
-//             left: 16px;
-//         }
-//     & input:focus {
-//         outline: 0;
-//         caret-color: $tertiary-color;
-//         color: $tertiary-color;
-//         font-size: 16px;
-//         line-height: 1.14em;
-//         letter-spacing: 0.01em;
-//         height: 100%;
-//         width: 100%;
-//     }
-// }
-
-// .modal__fieldset {
-//     position: relative;
-//     margin-block: 28px;
-//     width: 448px;
-//     height: 40px;
-
-//     & input:focus+svg {
-//             fill: $main-color;
-//             transition: fill 250ms;
-//             transition-timing-function: $cubic-bezier;
-//         }
-    
-//     & input:focus {
-//             border-color: $main-color;
-//             transition: border-color 250ms;
-//             transition-timing-function: $cubic-bezier;
-//         }
-// }
-// .modal__fieldset svg {
-//     left: 15px;
-// }
-
-// .modal__comment {
-//     width: 448px;
-//     height: 120px;
-//     border: 0;
-
-//     & textarea:focus {
-//             outline: 0;
-//             caret-color: $tertiary-color;
-//             color: $tertiary-color;
-//             font-size: 16px;
-//             line-height: 1.14em;
-//             letter-spacing: 0.01em;
-//             height: 100%;
-//             width: 100%;
-//         }
-// }
-
-// .modal__form label {
-//     position: absolute;
-//     top: -17px;
-//     left: 0px;
-//     font-size: 12px;
-//     line-height: 1.14em;
-//     letter-spacing: 0.01em;
-//     color: $secondary-color;
-// }
-
-// .modal__form input {
-//     border: 1px solid rgba(33, 33, 33, 0.2);
-//     border-radius: 4px;
-//     background-color: transparent;
-//     font-size: 15px;
-//     line-height: 1.14em;
-//     letter-spacing: 0.01em;
-//     width: 100%;
-//     height: 100%;
-//     padding-left: 36px;
-// }
-
-// .modal__form svg {
-//     position: absolute;
-//     top: 13px;
-// }
-
-// .modal__form label.modal__check-policy {
-//     position: absolute;
-//     top: 415px;
-//     left: 50px;
-//     font-size: 14px;
-//     line-height: 1.71em;
-//     letter-spacing: 0.03em;
-// }
-
-// .modal__check-policy a {
-//     color: $main-color;
-// }
-
-// .modal__comment textarea {
-//     border: 1px solid;
-//     border-color: rgba(33, 33, 33, 0.2);
-//     border-radius: 1%;
-//     padding-inline: 16px;
-//     padding-block: 12px;
-
-//     &:focus-within {
-//             padding-inline: 16px;
-//             padding-block: 12px;
-//         }
-// }
-
-// textarea:focus {
-//     border-color: $main-color;
-//     transition: border-color 250ms;
-//     transition-timing-function: $cubic-bezier;
-// }
-
-// .modal__checkbox {
-//     visibility: hidden;
-
-//     &:checked+span svg {
-//             background-color: $main-color;
-//             border: 0;
-// }
-// }
-
-// .modal__form svg.icon__checkbox {
-//     margin-right: 0px;
-//     fill: #ffffff;
-//     background: #ffffff;
-//     border: 2px solid $border-input;
-//     border-radius: 2px;
-//     position: relative;
-//     top: 2px;
-//     transition: border 250ms, fill 250ms, background-color 250ms;
-//     transition-timing-function: $cubic-bezier;
-// }
-
-// .modal__btn {
-//     position: absolute;
-//     width: 200px;
-//     height: 50px;
-//     top: 490px;
-// }
-// }
 @media screen and (min-width: 1200px) {
 .modal {
     margin: auto;
     height: 581px;
     width: 528px;
-    border-radius: 4px;
-    background-color: $primary-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-.modal__btn--close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    cursor: pointer;
-    border-width: 0px;
-    border-style: none;
-    border-color: $primary-color;
-    background-color: $primary-color;
-
-    &:hover {
-transform: scale(1.1);
-    transition: transform 250ms $cubic-bezier;
-    }
-}
-
-/* form in pop-up window */
-.modal__title {
-    position: absolute;
-    width: 448px;
-    left: 43px;
-    top: 43px;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-    letter-spacing: 0.03em;
-}
-
-.modal__form {
-    margin-top: 70px;
     max-width: 100%;
-    margin-inline: 20px;
-
-    &::placeholder {
-            color: rgba(117, 117, 117, 0.5);
-            font-size: 12px;
-            line-height: 1.14em;
-            letter-spacing: 0.01em;
-            position: absolute;
-            top: 12px;
-            left: 16px;
-        }
-    & input:focus {
-        outline: 0;
-        caret-color: $tertiary-color;
-        color: $tertiary-color;
-        font-size: 16px;
-        line-height: 1.14em;
-        letter-spacing: 0.01em;
-        height: 100%;
-        width: 100%;
-    }
 }
-
-.modal__fieldset {
-    position: relative;
-    margin-block: 28px;
-    width: 448px;
-    height: 40px;
-
-    & input:focus+svg {
-            fill: $main-color;
-            transition: fill 250ms;
-            transition-timing-function: $cubic-bezier;
-        }
-    
-    & input:focus {
-            border-color: $main-color;
-            transition: border-color 250ms;
-            transition-timing-function: $cubic-bezier;
-        }
+/* form in pop-up window */
+.modal__form {
+    margin-top: 50px;
+    max-width: 100%;
 }
-.modal__fieldset svg {
-    left: 15px;
-}
-
-.modal__comment {
-    width: 448px;
-    height: 120px;
-    border: 0;
-
-    & textarea:focus {
-            outline: 0;
-            caret-color: $tertiary-color;
-            color: $tertiary-color;
-            font-size: 16px;
-            line-height: 1.14em;
-            letter-spacing: 0.01em;
-            height: 100%;
-            width: 100%;
-        }
-}
-
-.modal__form label {
-    position: absolute;
-    top: -17px;
-    left: 0px;
-    font-size: 12px;
-    line-height: 1.14em;
-    letter-spacing: 0.01em;
-    color: $secondary-color;
-}
-
-.modal__form input {
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    background-color: transparent;
-    font-size: 15px;
-    line-height: 1.14em;
-    letter-spacing: 0.01em;
-    width: 100%;
-    height: 100%;
-    padding-left: 36px;
-}
-
-.modal__form svg {
-    position: absolute;
-    top: 13px;
-}
-
 .modal__form label.modal__check-policy {
-    position: absolute;
-    top: 415px;
-    left: 50px;
-    font-size: 14px;
-    line-height: 1.71em;
-    letter-spacing: 0.03em;
+    display: block;
+        left: 24px;
 }
-
-.modal__check-policy a {
-    color: $main-color;
-}
-
-.modal__comment textarea {
-    border: 1px solid;
-    border-color: rgba(33, 33, 33, 0.2);
-    border-radius: 1%;
-    padding-inline: 16px;
-    padding-block: 12px;
-
-    &:focus-within {
-            padding-inline: 16px;
-            padding-block: 12px;
-        }
-}
-
-textarea:focus {
-    border-color: $main-color;
-    transition: border-color 250ms;
-    transition-timing-function: $cubic-bezier;
-}
-
-.modal__checkbox {
-    visibility: hidden;
-
-    &:checked+span svg {
-            background-color: $main-color;
-            border: 0;
-}
-}
-
-.modal__form svg.icon__checkbox {
-    margin-right: 0px;
-    fill: #ffffff;
-    background: #ffffff;
-    border: 2px solid $border-input;
-    border-radius: 2px;
-    position: relative;
-    top: 2px;
-    transition: border 250ms, fill 250ms, background-color 250ms;
-    transition-timing-function: $cubic-bezier;
-}
-
-.modal__btn {
-    position: absolute;
-    width: 200px;
-    height: 50px;
-    top: 490px;
+.modal__fieldset:last-child {
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 }
