--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -8,15 +8,8 @@
 .project__description {
     font-size: 16px;
     line-height: 1.87em;
-}
-
-.product {
-    font-size: 16px;
-    line-height: 1.87em;
-    letter-spacing: 0.03em;
     color: $secondary-color;
 }
-
 .wrapper {
     display: flex;
     align-items: center;
@@ -30,7 +23,6 @@
     flex-direction: column;
     flex-wrap: nowrap;
     gap: 30px;
-    // justify-content: center;
 }
 
 .project h4 {
@@ -70,7 +62,6 @@
     object-fit: cover;
 }
 
-
 .project__overlay {
     position: absolute;
     top: 0;
@@ -85,197 +76,43 @@
     letter-spacing: 0.03em;
     line-height: 1.55;
     height: 100%;
-    padding-block: 49px;
+    padding-block: 77px;
     overflow: hidden;
     color: $primary-color;
     transform: translateY(100%);
 }
 
 @media screen and (min-width: 768px){
-.project__title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2em;
-    letter-spacing: 0.06em;
-}
-
-.project__description {
-    font-size: 16px;
-    line-height: 1.87em;
-}
-
-.product {
-    font-size: 16px;
-    line-height: 1.87em;
-    letter-spacing: 0.03em;
-    color: $secondary-color;
-}
-
-.wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-
 .project {
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    // justify-content: space-between;
-    gap: 30px;
-}
-
-.project h4 {
-    padding-inline: 24px;
-    margin-top: 20px;
-    margin-bottom: 0;
-}
-
-.project p {
-    padding-inline: 24px;
-    margin-top: 0;
-    margin-bottom: 20px;
 }
 
 .project__item {
-    position: relative;
     flex-basis: calc((100% - 30px)/2);
-    // border: 1px solid #eeeeee;
-
-    &:focus, &:hover {
-            cursor: pointer;
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-                1px 4px 6px rgba(0, 0, 0, 0.16);
-            transition: box-shadow 250ms $cubic-bezier;
-        }
-    &:hover .project__text {
-        background-color: $main-color-opacity;
-        transform: translateY(0);
-        transition: transform 250ms $cubic-bezier;
-    }
 }
-
-.project__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 294px;
-    overflow: hidden;
-}
-
-.project__text {
-    font-size: 18px;
-    letter-spacing: 0.03em;
-    line-height: 1.55;
-    height: 100%;
-    padding-block: 49px;
-    overflow: hidden;
-    color: $primary-color;
-    transform: translateY(100%);
+    .project__text {
+            padding-left: 20px;
+            padding-right: 45px;
+            padding-block: 49px;
 }
 }
 
 @media screen and (min-width: 1200px) {
-    .project__title {
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 2em;
-        letter-spacing: 0.06em;
-    }
-
-    .project__description {
-        font-size: 16px;
-        line-height: 1.87em;
-    }
-
-    .product {
-        font-size: 16px;
-        line-height: 1.87em;
-        letter-spacing: 0.03em;
-        color: $secondary-color;
-    }
-
-    .wrapper {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        flex-wrap: wrap;
-        gap: 30px;
-    }
 
     .project {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
         justify-content: space-between;
         gap: 0;
         row-gap: 30px;
-
         box-sizing: border-box;
             -moz-box-sizing: border-box;
             -webkit-box-sizing: border-box;
-    }
-
-    // .project>div {
-    //     margin-bottom: 30px;
-    //     // border: 1px solid #eeeeee;
-    // }
-
-    .project h4 {
-        padding-inline: 24px;
-        margin-top: 20px;
-        margin-bottom: 0;
-    }
-
-    .project p {
-        padding-inline: 24px;
-        margin-top: 0;
-        margin-bottom: 20px;
     }
 
     .project__item {
-        position: relative;
         flex-basis: auto;
-        // display: flex;
         box-sizing: border-box;
             -moz-box-sizing: border-box;
             -webkit-box-sizing: border-box;
-
-        &:focus,
-        &:hover {
-            cursor: pointer;
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-                1px 4px 6px rgba(0, 0, 0, 0.16);
-            transition: box-shadow 250ms $cubic-bezier;
-        }
-
-        &:hover .project__text {
-            background-color: $main-color-opacity;
-            transform: translateY(0);
-            transition: transform 250ms $cubic-bezier;
-        }
-    }
-
-    .project__overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 294px;
-        overflow: hidden;
-    }
-
-    .project__text {
-        font-size: 18px;
-        letter-spacing: 0.03em;
-        line-height: 1.55;
-        height: 100%;
-        padding-block: 49px;
-        overflow: hidden;
-        color: $primary-color;
-        transform: translateY(100%);
     }
 }
