--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,13 +1,12 @@
 .slider {
     display: flex;
     box-sizing: border-box;
-    // max-width: 1600px;
     height: 400px;
     justify-content: center;
     background: #2f303a66;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/slider-photo-mobile.jpg);
+        url(../images/slider-photo-mobile.png);
     
     background-repeat: no-repeat;
     background-position: center;
@@ -62,19 +61,9 @@ screen and (min-resolution: 2dppx) and (min-width: 320px) {
 
 @media screen and (min-width: 768px) {
 .slider {
-    display: flex;
-    box-sizing: border-box;
-    // max-width: 1600px;
-    // height: 600px;
-    justify-content: center;
-    background: #2f303a66;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
         url(../images/slider-photo-tablet.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    flex-direction: column;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
@@ -89,27 +78,25 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
 }
 
 @media screen and (min-width: 1200px) {
+.slider {
+        max-width: 1600px;
+        height: 600px;
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url(../images/slider-photo.jpg);
+    }
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     .slider {
-            display: flex;
-            box-sizing: border-box;
-            max-width: 1600px;
-            height: 600px;
-            justify-content: center;
-            background: #2f303a66;
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-                    rgba(47, 48, 58, 0.4)),
-                url(../images/slider-photo.jpg);
-            background-repeat: no-repeat;
-            background-position: center;
-            flex-direction: column;
-        }
-                @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
-                screen and (min-resolution: 192dpi) and (min-width: 1200px),
-                screen and (min-resolution: 2dppx) and (min-width: 1200px) {
-                    .slider {
-                        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-                                rgba(47, 48, 58, 0.4)),
-                            url(../images/slider-photo@2x.jpg);
-                    }
-                }
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url(../images/slider-photo@2x.jpg);
+    }
+}
+.slider__text {
+    margin: 0 auto;
+    margin-bottom: 30px;
+    font-size: 44px;
+}
 }
