--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -18,6 +18,11 @@ object-fit: cover;
     letter-spacing: 0.03em;
     color: $secondary-color;
 }
+.team__img-box {
+    width: 100%;
+    overflow: hidden;
+}
+
 @media screen and (min-width: 768px) {
     .team__img {
         width: 100%;
